# arena

./: .clang-format  .gitmodules  CMakeLists.txt  notes.md  todo.md
.github/workflows/: check_formatting.yaml  run_tests.yaml
lib/rktest/: rktest.h
src/: arena.c  component.c  component.h  entity.c  entity.h  game.c  game.h  logging.c  logging.h  main.c  main_copy.c  map.c  map.h  raylib_extra.c  raylib_extra.h  resource.c  resource.h  resource_manager.c  resource_manager.h  scene.c  scene.h  sparse_array.c  sparse_array.h  win32.c  win32.h
src/core/: arena.c  array.c  array.h  array_map.c  array_map.h  for_each.h  geometry.c  geometry.h  sparse_array.c  sparse_array.h
src/core/data/: arena.c  array.c  array.h  array_map.c  array_map.h  for_each.h  sparse_array.c  template_util.h
src/core/debug/: assert.c  assert.h  logging.c  logging.h
src/engine/: component.h  engine.h  entity.c  entity.h  resource.c  resource.h  ui.c  ui.h
src/game/: game.c  game.h  scene.c  scene.h
src/game/scene/: debug.c  debug.h  debug_physics.c  debug_physics.h  gameplay.c  gameplay.h  main_menu.c  main_menu.h  scene.c  scene.h
src/game/scene/debug/: collision.c  collision.h  collision_debug.c  collision_debug.h
src/memory/: arena.c  arena.h  dict.c  dict.h  map.c  map.h  pool.h
src/platform/: assert.c  assert.h  input.c  input.h  lean_mean_windows.h  logging.c  win32.c  win32.h  window.c  window.h
test/: arena_tests.c  array_map_tests.c  dict_tests.c  entity_tests.c  main.c  map.c  map_tests.c  pool_tests.c  rktest.h  sparse_array_tests.c  ui_tests.c
test/core/: array_tests.c
test/core/data/: arena_tests.c  array_map_tests.c  array_tests.c  sparse_array_tests.c
